src/test/resources/public/input/typechecking/fail/main_structure/fail02.jova
class Test{

}

class Main {
  private int dontDoThis;

  public int main() {
    
    return 0;
  }

}